[Cleanup] Modernize remaining deprecated java.util.Locale usages in PLM module